adding dungeon generator classes